--- a/frontend/src/components/styles/ProductCardStyle.product.css
+++ b/frontend/src/components/styles/ProductCardStyle.product.css
@@ -160,7 +160,6 @@
   margin-top: 0.6rem;
 }
 
-
 @media (min-width: 400px) {
   .ProductDashboard {
     flex-direction: row;
@@ -204,7 +203,7 @@
     display: grid;
     margin: 2rem auto 4rem;
     width: 70vw;
-    grid-template-columns: 24rem 12rem 12rem 12rem 12rem 12rem;
+    grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 8rem 20rem 5rem 5rem 5rem;
   }
 
@@ -214,14 +213,14 @@
     text-align: left;
     padding-left: 2rem;
   }
-  
+
   .singleImgProduct {
     width: 20vw;
     margin: 1rem 0;
     grid-row: 2 / 6;
     grid-column: 1 / 3;
   }
-  
+
   .singlePrice {
     grid-row: 3;
     grid-column: 4;
@@ -234,12 +233,12 @@
     width: 46rem;
     margin: 1rem;
   }
-  
+
   .singleAddToCart {
     width: 15rem;
     margin: 0 15rem !important;
   }
-  
+
   .singleDesc {
     grid-row: 2;
     grid-column: 3 / 7;
